test/files_test/errors/define_missing_value.scm
; Test: Define with missing value - should return exit code 84
(define foo)
